force-app/main/default/objects/leaseworks__Shop_Visit__c/leaseworks__Shop_Visit__c.object-meta.xml
<CustomObject>
    <description>Shop Visit lets users create multiple assembly events together. All the created events can be viewed as related to the Shop Visit.</description>
    <label>Shop Visit</label>
    <nameField>
        <label>Shop Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>