force-app/main/default/objects/leaseworks__Shop_Visit__c/fields/leaseworks__Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comments__c</fullName>
    <description>Provide any relevant comments related to this Shop Visit.</description>
    <inlineHelpText>Provide any relevant comments related to this Shop Visit.</inlineHelpText>
    <label>Comments</label>
    <length>280</length>
    <type>LongTextArea</type>
</CustomField>