force-app/main/default/objects/leaseworks__Shop_Visit__c/fields/leaseworks__Date_of_Removal__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Removal__c</fullName>
    <description>Date by which the assembly was removed. This maybe different from the induction date, as the assembly may have been removed, but awaiting shop induction.</description>
    <inlineHelpText>Date by which the assembly was removed. This maybe different from the induction date, as the assembly may have been removed, but awaiting shop induction.</inlineHelpText>
    <label>Date of Removal</label>
    <type>Date</type>
</CustomField>