force-app/main/default/objects/leaseworks__Shop_Visit__c/fields/leaseworks__Date_of_SV_Commencement__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_SV_Commencement__c</fullName>
    <label>Date of SV Commencement</label>
    <type>Date</type>
</CustomField>