force-app/main/default/objects/leaseworks__Shop_Visit__c/fields/leaseworks__Induction_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Induction_Date__c</fullName>
    <description>Start Date Of The Eligible Event</description>
    <inlineHelpText>Start Date Of The Eligible Event</inlineHelpText>
    <label>Induction Date</label>
    <type>Date</type>
</CustomField>