force-app/main/default/objects/leaseworks__Shop_Visit__c/fields/leaseworks__Name_of_MRO__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Name_of_MRO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of MRO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shop Visits</relationshipLabel>
    <relationshipName>Shop_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>