force-app/main/default/objects/leaseworks__Shop_Visit__c/fields/leaseworks__Release_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Release_Date__c</fullName>
    <description>End Date Of The Eligible Event</description>
    <inlineHelpText>Mandatory to calculate Ratio since event in the Supplemental Rent</inlineHelpText>
    <label>Release Date (CRS)</label>
    <type>Date</type>
</CustomField>