force-app/main/default/objects/leaseworks__Shop_Visit__c/fields/leaseworks__TSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSN__c</fullName>
    <description>Total Hours when Event was performed</description>
    <inlineHelpText>Total Hours when Event was performed</inlineHelpText>
    <label>TSN (at event)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>