force-app/main/default/objects/leaseworks__Shop_Visit__c/validationRules/leaseworks__InductionDate_Before_ReleaseDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__InductionDate_Before_ReleaseDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c
,
OR (leaseworks__Release_Date__c &lt; leaseworks__Induction_Date__c, leaseworks__Release_Date__c &gt; TODAY() )

)</errorConditionFormula>
    <errorDisplayField>leaseworks__Release_Date__c</errorDisplayField>
    <errorMessage>Release date cannot be before the Induction date or future date</errorMessage>
</ValidationRule>