force-app/main/default/objects/leaseworks__Shop_Visit__c/validationRules/leaseworks__ReleaseDate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ReleaseDate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Release_Date__c &lt; leaseworks__Constituent_Assembly__r.leaseworks__Date_of_Manufacture__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Release_Date__c</errorDisplayField>
    <errorMessage>Please enter valid date as Manufacturing date is greater then Release date</errorMessage>
</ValidationRule>